# adv2021

./: Cargo.toml
notes/: rust_notes.md
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  lib.rs  main.rs
src/helpers/: base2d.rs  grid.rs  read.rs  utils.rs
