[package]
name = "adv2021"
version = "0.1.0"
authors = ["Fernando Martins <emmanuel.martins@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
lazy_static = "1.4"

[lib]
name = "adv21"
path = "src/lib.rs"